# csv-parser

./: .clang-format  CMakeLists.txt  README.md
input-example/: example.csv
lib/csv-parser/: CMakeLists.txt
lib/csv-parser/include/: csv-parser.hpp
shared/tuple-helpers/: CMakeLists.txt
shared/tuple-helpers/include/: tuple-helpers.hpp
src/: main.cpp
